[metadata]
name = sshfs
version = 2021.11.1
description = SSH Filesystem -- Async SSH/SFTP backend for fsspec
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    fsspec>=2021.8.1
    asyncssh>=2.7.1,<2.9
    async_exit_stack==1.0.1; python_version < "3.7"
packages = find:

[options.extras_require]
bcrypt = asyncssh[bcrypt]
fido2 = asyncssh[fido2]
gssapi = asyncssh[gssapi]
libnacl = asyncssh[libnacl]
pkcs11 = asyncssh[python-pkcs11]
pyopenssl = asyncssh[pyOpenSSL]
pywin32 = asyncssh[pywin32]
