[metadata]
name = sshfs
description = SSH Filesystem -- Async SSH/SFTP backend for fsspec
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
    fsspec>=2021.8.1
    asyncssh==2.19.0
packages = find:

[options.extras_require]
bcrypt = asyncssh[bcrypt]
fido2 = asyncssh[fido2]
gssapi = asyncssh[gssapi]
libnacl = asyncssh[libnacl]
pkcs11 = asyncssh[python-pkcs11]
pyopenssl = asyncssh[pyOpenSSL]
pywin32 = asyncssh[pywin32]

[options.entry_points]
fsspec.specs =
    ssh = sshfs.spec:SSHFileSystem
    sftp = sshfs.spec:SSHFileSystem
